--- a/blogpost.html
+++ b/blogpost.html
@@ -5,13 +5,9 @@
     </head>
     <body>
         <div id="conteiner">
-            <div id="cabecera">
-                Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
-            </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante</h1>
-                <p>Este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+                <p>Este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas. Ademas estoy aprendiendo muy bien</p>
             </div>
         </div>
     </body>
